<resources>
    <string name="app_name">Einfach Tierisch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">title_profile</string>
    <string name="Profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Welcome">Welcome</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">login</string>
    <string name="Register">Register</string>
    <string name="username">username</string>
    <string name="chance_image">Chance Image</string>
    <string name="wie_hei_t_ihr_hund">Wie heißt ihr Hund?</string>
    <string name="vor_und_nachname">Vor und Nachname</string>
    <string name="welchen_tgl_zeitraum_w_rden_sie_ben_tigen">Welchen tgl. Zeitraum würden Sie benötigen?</string>
    <string name="message">message</string>
    <string name="requestText">requestText</string>
    <string name="first_name">first_name</string>
    <string name="last_name">last_name</string>
    <string name="enter_your_password">enter_your_password</string>
    <string name="email_phone_no">email_phone_no</string>
    <string name="News">News</string>
    <string name="send">send</string>
    <string name="facebooklink">facebooklink</string>
    <string name="instagramlink">instagramlink</string>
    <string name="githublink">githublink</string>
    <string name="ask_your_question">ask_your_question</string>
    <string name="help_desk">help_desk</string>
</resources>