<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.modul3.einfachtierisch.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_loginFragment"
            app:destination="@id/loginFragment" />
        <action
            android:id="@+id/action_navigation_home_to_signUpFragment"
            app:destination="@id/signUpFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.modul3.einfachtierisch.ui.dashboard.DashBoardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard">
        <action
            android:id="@+id/action_navigation_dashboard_to_dashBoardDetailFragment"
            app:destination="@id/dashBoardDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.modul3.einfachtierisch.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.modul3.einfachtierisch.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/dashBoardDetailFragment"
        android:name="com.modul3.einfachtierisch.ui.dashboard.DashBoardDetailFragment"
        android:label="DashBoardDetailFragment"
        tools:layout="@layout/fragment_dashboarddetail" >
        <argument
            android:name="newsId"
            app:argType="integer" />
    </fragment>
    <argument
        android:name="newsId"
        app:argType="integer" />
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.modul3.einfachtierisch.ui.login.LoginFragment"
        android:label="fragment_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_loginFragment_to_signUpFragment"
            app:destination="@id/signUpFragment" />
        <action
            android:id="@+id/action_loginFragment_to_navigation_dashboard"
            app:destination="@id/navigation_dashboard" />
    </fragment>
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.modul3.einfachtierisch.ui.signUp.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />

</navigation>