<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/line1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="SIGN UP"
            android:textColor="#FF000000"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/signup_video"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <VideoView
            android:id="@+id/signup_video"
            android:layout_width="412dp"
            android:layout_height="200dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line1" />

        <ImageView
            android:id="@+id/user_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_video"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/user_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/user_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/email_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="24dp"
            android:src="@drawable/email_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/user_image_2"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/password_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_outline_lock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_image"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/password_image_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_outline_lock_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_image"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/nickName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="36dp"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/user_image"
            app:layout_constraintTop_toBottomOf="@id/signup_video"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="@+id/nickName"
            app:layout_constraintStart_toEndOf="@+id/user_image_2"
            app:layout_constraintTop_toBottomOf="@+id/nickName"
            app:tint="@color/black"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/emailId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="36dp"
            android:hint="@string/email_phone_no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/email_image"
            app:layout_constraintTop_toBottomOf="@id/last_name"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="36dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/password_image"
            app:layout_constraintTop_toBottomOf="@id/emailId"
            app:tint="@color/black" />

        <EditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="36dp"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/password_image_2"
            app:layout_constraintTop_toBottomOf="@id/password1"
            app:tint="@color/black" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="160dp"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:text="SIGN UP"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_image_2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>